--- a/Stacks/index.html
+++ b/Stacks/index.html
@@ -4,7 +4,6 @@
 	<title></title>
 </head>
 <body>
-
-	<script type="text/javascript" src="Set.js"></script>
+<script type="text/javascript" src="stack.js"></script>
 </body>
 </html>
