Completed Queue DS and add Array

--- a/Queues/index.html
+++ b/Queues/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 </head>
 <body>
-<script type="text/javascript" src="queue.js"></script>
+<script type="text/javascript" src="Queue.js"></script>
+<script type="text/javascript" src="PriorityQueue.js"></script>
+<script type="text/javascript" src="hotPotato.js"></script>
 </body>
 </html>
