adding more algorithms

--- a/LinkedLists/index.html
+++ b/LinkedLists/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<script type="text/javascript" src="LinkedList.js"></script>
+	<script type="text/javascript" src="DoublyLinkedList.js"></script>
 </body>
 </html>
