add greatest common divisor and timer

--- a/Algorithms/greatestCommonDivisor/greatestCommonDivisor.html
+++ b/Algorithms/greatestCommonDivisor/greatestCommonDivisor.html
@@ -6,5 +6,6 @@
 <body>
 	<script type="text/javascript" src="greatestCommonDivisor.js"></script>
 	<script type="text/javascript" src="greatestCommonDivisor1.js"></script>
+	<script type="text/javascript" src="greatestCommonDivisor2.js"></script>
 </body>
 </html>
